updated blog for mobile stuff, fixed summary card on mobile

--- a/hooleymcknight-reacts/styles/Blog.module.scss
+++ b/hooleymcknight-reacts/styles/Blog.module.scss
@@ -11,7 +11,7 @@
     margin: auto;
 
     li {
-      padding: 20px 0;
+      padding-bottom: 20px;
 
       a {
         background: var(--toggle-main);
@@ -23,6 +23,8 @@
           "image blank";
         grid-template-columns: min-content auto;
         border-radius: 10px;
+        padding-right: 10px;
+        align-items: center;
         transition: all 0.2s ease;
 
         &:hover {
@@ -39,21 +41,70 @@
           font-size: 28px;
           font-weight: bold;
           margin: 30px auto 0 0;
+          line-height: 34px;
+
+          @media (max-width: 850px) {
+            margin-top: 10px;
+          }
         }
 
         [class="blog-date"] {
           font-size: 20px;
           margin: 0;
         }
+
+        @media (max-width: 550px) {
+          grid-template-areas:
+            "title"
+            "date"
+            "image"
+            "blurb";
+          grid-template-columns: auto;
+          justify-content: center;
+          padding: 5px 10px;
+          max-width: 400px;
+          margin: auto;
+          text-align: center;
+
+          img {
+            margin: auto;
+          }
+
+          [class="blog-title"] {
+            font-size: 24px;
+            line-height: 28px;
+          }
+
+          [class="blog-date"] {
+            font-size: 18px;
+            margin-top: 5px;
+          }
+
+          [class="blurb"] {
+            font-size: 16px;
+            margin-top: 0;
+            margin-bottom: 10px;
+          }
+        }
       }
     }
+  }
+
+  > a {
+    text-align: center;
+    display: block;
+    width: fit-content;
+    margin: auto;
+    padding: 5px 10px;
+    font-size: 18px;
+    text-decoration: underline;
   }
 }
 
 .post {
   max-width: 1000px;
   width: 95%;
-  margin: auto;
+  margin: 60px auto 0;
 
   h1 {
     margin-bottom: 10px;
@@ -77,6 +128,7 @@
   color: var(--alt-text);
   font-weight: bold;
   font-size: 20px;
+  border-bottom-right-radius: 8px;
 
   &:hover {
     color: var(--alt-purple);
