--- a/hooleymcknight-reacts/styles/Index.module.scss
+++ b/hooleymcknight-reacts/styles/Index.module.scss
@@ -92,6 +92,7 @@
 
     @media (max-width: 767px) {
       flex-direction: column;
+      margin: auto;
     }
   }
 
